Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109243

[REG: 5->6] MouseArea under WebEngineView is getting emitting entered/exited signals even though mouse does not enter or leave it

    XMLWordPrintable

Details

    • Linux/X11, macOS, Windows
    • f4407faa6 (dev)

    Description

      Attached example has MouseArea with WebEngineView inside it. If mouse is moved from MouseArea over WebEngineView, the MouseArea is emitting exited and entered signals and also each time mouse hovers scrollbar of the WebEngineView.

      In Qt 5 the MouseArea in this situation did not emit those signals.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikolaj.boc MikoĊ‚aj Boc (Inactive)
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes