Make the RWHV Qt delegate not accept the mouse move event

This is done to give the items upper in the hierarchy a chance to
update their hover state.

Fixes: QTBUG-109243
Change-Id: I011b49697711547b5096ef793a36a42ab34decfd
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>